--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,15 +1,23 @@
 .mainScreen {
-	display: flex;
-	height: 100%;
-	width: 100%;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainScreen__authBox {
-	background-color: #324158;
-	opacity: 0.8;
-	height: 440px;
-	width: 350px;
-	border-radius: 20px;
+    background-color: #324158;
+    opacity: 0.8;
+    height: 150px;
+    width: 1000px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.metamaskButton {
+    height: 100%;
+    width: 100%;
 }
