--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -14,6 +14,36 @@
     box-shadow: 5px 5px 15px 5px #000000;
     margin-right: 32px;
 }
+.info_div {
+    width: 400px;
+    height: 808px;
+    margin-top: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-right: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.graph_info {
+    background-color: rgb(255, 255, 255, 0.05);
+    width: 360px;
+    height: 380px;
+    border: 3px solid #ff3f81;
+    border-radius: 8px;
+    box-shadow: 5px 5px 15px 5px #000000;
+}
+.graph_settings {
+    background-color: rgb(255, 255, 255, 0.05);
+    width: 360px;
+    height: 380px;
+    border: 3px solid #ff3f81;
+    border-radius: 8px;
+    box-shadow: 5px 5px 15px 5px #000000;
+    display: flex;
+    flex-direction: column;
+}
 .graph_title {
     background-color: rgb(60, 60, 60);
     height: min-content;
@@ -21,12 +51,10 @@
     color: #ff3f81;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 32px;
-    position: absolute;
     padding: 8px;
     border-bottom: 3px solid #ff3f81;
     border-right: 3px solid #ff3f81;
     border-bottom-right-radius: 8px;
     font-weight: 500;
-
     box-shadow: 5px 5px 5px 1px #212121;
 }
