--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -9,12 +9,13 @@
 .mainScreen__authBox {
     background-color: #324158;
     opacity: 0.8;
-    height: 150px;
-    width: 1000px;
+    height: 300px;
+    width: 200px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .metamaskButton {
