--- a/src/components/MetaMaskAuth/ConnectWallet.module.css
+++ b/src/components/MetaMaskAuth/ConnectWallet.module.css
@@ -1,17 +1,23 @@
 .connect-wallet {
-    background-color: #1578f1;
+    background-color: #2c2f36;
     color: white;
-    width: 150px;
-    height: 40px;
+    width: 100%;
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 15px;
     font-weight: bold;
-    border: 1px solid transparent;
-    border-radius: 50px;
+    border: 0.1px solid rgba(255, 255, 255, 0.576);
+    border-radius: 10px;
     padding: 0.8rem 1rem;
     cursor: pointer;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+.connect-wallet:hover {
+    border: 1px solid #ff3f81;
 }
 
 .connect-wallet-loading {
