--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -5,28 +5,6 @@
     justify-content: center;
     position: relative;
 }
-.graph_div {
-    background-color: rgb(255, 255, 255, 0.05);
-    width: fit-content;
-    height: fit-content;
-    border: 3px solid #ff3f81;
-    border-radius: 8px;
-    margin-top: 32px;
-    box-shadow: 5px 5px 15px 5px #000000;
-    margin-right: 32px;
-}
-.info_div {
-    width: 400px;
-    height: 808px;
-    margin-top: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    margin-right: 32px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
 .graph_info {
     background-color: #222;
     width: 360px;
@@ -36,17 +14,9 @@
     box-shadow: 5px 5px 15px 5px #000000;
     position: absolute;
     align-self: flex-end;
-    left: 0px;
-}
-.graph_settings {
-    background-color: rgb(255, 255, 255, 0.05);
-    width: 360px;
-    height: 380px;
-    border: 3px solid #ff3f81;
-    border-radius: 8px;
-    box-shadow: 5px 5px 15px 5px #000000;
-    display: flex;
-    flex-direction: column;
+    left: 16px;
+    bottom: 16px;
+    overflow-y: scroll;
 }
 .graph_title {
     background-color: rgb(60, 60, 60);
@@ -54,7 +24,6 @@
     width: fit-content;
     color: #ff3f81;
     font-family: Arial, Helvetica, sans-serif;
-    margin-right: 32px;
     padding: 8px;
     border-bottom: 3px solid #ff3f81;
     border-right: 3px solid #ff3f81;
@@ -65,6 +34,12 @@
 .tab_div {
     position: absolute;
     width: 40%;
+}
+.drop_down_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
 }
 iframe {
     pointer-events: none;
