--- a/src/components/GraphTab/GraphTab.css
+++ b/src/components/GraphTab/GraphTab.css
@@ -30,3 +30,23 @@
     align-items: center;
     justify-content: center;
 }
+.GraphTab__form {
+    height: fit-content;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ff3f81;
+    border: 3px solid #ff3f81;
+    border-radius: 8px;
+    background-color: #222;
+    padding: 4px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+}
+.GraphTab__input {
+    background-color: #222;
+    color: #ff3f81;
+    margin-left: 16px;
+    margin-right: 16px;
+    width: 200px;
+    border: 0px solid #ff3f81;
+}
