--- a/src/components/MetaMaskAuth/ConnectWallet.module.css
+++ b/src/components/MetaMaskAuth/ConnectWallet.module.css
@@ -1,7 +1,8 @@
 .connect-wallet {
     background-color: #2c2f36;
+    font-family: "Inter custom", sans-serif;
     color: white;
-    width: 100%;
+    width: 386px;
     height: 60px;
     display: flex;
     align-items: center;
@@ -10,10 +11,9 @@
     font-weight: bold;
     border: 0.1px solid rgba(255, 255, 255, 0.576);
     border-radius: 10px;
-    padding: 0.8rem 1rem;
+    padding: 0.6rem 1rem;
     cursor: pointer;
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-bottom: 20px;
 }
 
 .connect-wallet:hover {
