--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -9,9 +9,8 @@
 }
 
 .mainScreen__authBox {
-    background-color: #181b1f;
-    height: 130px;
     width: 418px;
+    height: 220px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -22,23 +21,23 @@
 
 .connectWalletToView {
     width: 100%;
-    font-size: small;
-    /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900;
+    height: 52px;
+    padding: 16px;
+    font-size: 16px;
+    font-family: "Inter custom", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #181b1f;
+    background-color: #181b1fe7;
     color: white;
-    flex: 1;
 }
 .wallets {
-    background-color: #181b1f;
-    flex: 2;
+    background-color: #181b1fe7;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
+    height: 373px;
 }
 
 iframe {
