--- a/src/components/LinkDropDown/LinkDropDown.css
+++ b/src/components/LinkDropDown/LinkDropDown.css
@@ -1,18 +1,21 @@
 .LinkDropDown__header {
     background-color: #333;
-    border: 2px solid #ff3f81;
+    border: 2px solid #555;
     border-radius: 8px;
     height: 32px;
     width: 98%;
-    margin-top: 8px;
+    margin-bottom: 8px;
     display: flex;
     flex-direction: row;
     align-items: center;
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
-    color: #ff3f81;
+    color: #fff;
     font-weight: 600;
     font-size: large;
+}
+.LinkDropDown__header:hover {
+    border: 2px solid #ff3f81;
 }
 .LinkDropDown__header_down {
     background-color: #333;
@@ -21,7 +24,6 @@
     border-top-left-radius: 8px;
     height: 32px;
     width: 98%;
-    margin-top: 8px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -41,6 +43,7 @@
     border-top: 0px solid #ff3f81;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
+    margin-bottom: 8px;
 }
 .LinkDropDown__body_ul {
     padding: 8px;
