--- a/src/components/GraphTab/GraphTab.css
+++ b/src/components/GraphTab/GraphTab.css
@@ -13,7 +13,7 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 50px;
     border-bottom-left-radius: 32px;
     border-bottom-right-radius: 32px;
     cursor: pointer;
@@ -23,7 +23,7 @@
     width: auto;
     height: 32px;
 }
-.menu {
+.GraphTab__menu_back {
     background-color: rgb(0, 0, 0, 0.3);
     height: 100%;
     width: 100%;
@@ -31,23 +31,55 @@
     align-items: center;
     justify-content: center;
 }
+.GraphTab__menu {
+    background-color: #222;
+    height: 80%;
+    width: 90%;
+    border-radius: 16px;
+    border: 1px solid #444;
+    margin-top: 10%;
+    padding: 8px;
+}
+.GraphTab__menu_container {
+    display: flex;
+    justify-content: center;
+}
+.GraphTab__menu_title {
+    height: min-content;
+    width: 100%;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+
+    font-size: 32px;
+    font-weight: "bold";
+}
 .GraphTab__form {
     height: fit-content;
+    padding: 8px;
+    margin-top: 8px;
+    width: 100%;
+}
+.GraphTab__label {
     font-family: Arial, Helvetica, sans-serif;
     color: #ff3f81;
-    border: 3px solid #ff3f81;
-    border-radius: 8px;
-    background-color: #222;
-    padding: 4px;
-    width: fit-content;
+    font-weight: bold;
+    font-size: larger;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     flex-direction: row;
 }
 .GraphTab__input {
     background-color: #222;
-    color: #ff3f81;
+    border: 1px solid #444;
+    border-radius: 8px;
+    padding: 8px;
     margin-left: 16px;
-    margin-right: 16px;
-    width: 200px;
-    border: 0px solid #ff3f81;
+    text-align: right;
+    color: #fff;
+    font-weight: bold;
+}
+textarea:focus,
+input:focus {
+    outline: none;
 }
