--- a/src/components/MetaMaskAuth/ConnectWallet.module.css
+++ b/src/components/MetaMaskAuth/ConnectWallet.module.css
@@ -26,3 +26,8 @@
 .connect-wallet-loading {
     cursor: none;
 }
+.loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
