--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,10 @@
-.header__header {
+.Header {
     height: 96px;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.header__logo-container {
+.Header__container {
     background-color: rgb(0, 0, 0, 0.6);
     display: flex;
     flex-direction: row;
@@ -15,7 +15,7 @@
     border-bottom-left-radius: 32px;
     border-bottom-right-radius: 32px;
 }
-.header__logo {
+.Header__container-logo {
     width: auto;
     height: 64px;
 }
