--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 * {
-	padding: 0;
-	margin: 0;
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
+    padding: 0px;
+    margin: 0px;
+}
+body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
