--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,4 +1,4 @@
-.mainScreen {
+.LandingPage {
     display: flex;
     height: 100%;
     width: 100%;
@@ -8,7 +8,11 @@
     flex-direction: column;
 }
 
-.mainScreen__authBox {
+iframe {
+    pointer-events: none;
+}
+
+.LandingPage__authBox {
     width: 418px;
     height: 220px;
     border-radius: 20px;
@@ -19,8 +23,7 @@
     margin-bottom: 250px;
     border: 1px solid #444;
 }
-
-.connectWalletToView {
+.LandingPage__authBox-header {
     width: 100%;
     height: 52px;
     padding: 16px;
@@ -32,14 +35,10 @@
     background-color: #181b1fe7;
     color: white;
 }
-.wallets {
+.LandingPage__authBox-wallets {
     background-color: #181b1fe7;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-}
-
-iframe {
-    pointer-events: none;
 }
