--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -39,19 +39,20 @@ iframe {
     display: flex;
     color: white;
     justify-content: center;
-    padding: 3px;
+    align-self: center;
     height: fit-content;
     width: fit-content;
-    border: 1px solid#ffffff;
-    border-radius: 8px;
-    padding: 6px;
-    background-color: #444;
+    padding: 4px;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #333;
+    border: 2px solid #555;
+    border-radius: 8px;
+    cursor: pointer;
 }
 .MainPage__GraphAddress-goBack:hover {
     background-color: #222;
+    border: 2px solid #444;
     color: #ff3f81;
-    cursor: pointer;
 }
 
 .MainPage__GraphInfo {
