--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -18,7 +18,7 @@ iframe {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100px;
+    height: fit-content;
     width: 300px;
     background-color: #222;
     border: 1px solid #444;
@@ -33,7 +33,8 @@ iframe {
     height: fit-content;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 5px;
+    margin: 3px;
+    text-align: center;
 }
 .MainPage__GraphAddress-goBack {
     display: flex;
@@ -48,6 +49,7 @@ iframe {
     border: 2px solid #555;
     border-radius: 8px;
     cursor: pointer;
+    margin: 3px;
 }
 .MainPage__GraphAddress-goBack:hover {
     background-color: #222;
