--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -11,6 +11,48 @@ iframe {
     pointer-events: none;
 }
 
+.MainPage__help {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: fit-content;
+    background-color: #222;
+    border: 1px solid #444;
+    border-radius: 8px;
+}
+.MainPage__help-title {
+    color: #ff3f81;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
+    font-weight: "bold";
+    margin-bottom: 16px;
+}
+.MainPage__help-text {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+.MainPage__helpButton {
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #333;
+    border: 2px solid #555;
+    border-radius: 8px;
+    padding: 4px;
+    cursor: pointer;
+}
+.MainPage__helpButton:hover {
+    background-color: #222;
+    border: 2px solid #444;
+    color: #ff3f81;
+}
+
 .MainPage__GraphAddress {
     position: absolute;
     left: 16px;
