--- a/src/routes/Mainpage/MainPage.css
+++ b/src/routes/Mainpage/MainPage.css
@@ -30,12 +30,12 @@ iframe {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
     font-weight: "bold";
-    margin-bottom: 16px;
+    margin: 16px 0px;
 }
 .MainPage__help-text {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 17px;
 }
 .MainPage__helpButton {
     color: #fff;
